# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-07-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add "build" ZeroMQ option value

2013-07-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add eunit/ct integration for handling unit tests
    * Add PropEr as a dependency for running tests
    * Add a basic uninstall makefile target

2013-07-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cpg timeout usage to internal and external services so that the
      service request timeout provides an absolute limit for
      any service name lookup
    * Update cpg

2013-07-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Java http_req test
    * Fix reltool_util:modules_purged/2 functionality

2013-07-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add all the warnings previously excluded in the rebar_src.config.in file
    * Fix the various warnings within the external dependencies
    * Reformat the reltool.config.in file to be simpler
    * Fix autoconf macros so that AC_LANG_CALL is no longer used to fix
      ZeroMQ library detection (and GMP library detection)

2013-07-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add service prefix configuration validation
    * Add ACL configuration validation
    * Update uuid

2013-07-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add type specifications to the cloudi module and the
      cloudi_service module, for use with Erlang CloudI services
    * Fix emysql crypto hash usage (error is in 1.2.4)
    * Update edoc documentation

2013-07-05 Mahesh Paolini-Subramanya   <mahesh [at] dieswaytoofast (dot) com>

    * Merge elasticsearch database integration

2013-07-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the build system so that it can use an external rebar executable
      specified by the configuration
    * Add root rebar.config for using CloudI as a rebar dependency