@@ -1,0 +1,9 @@
+%-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
+% ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et:
+
+{ct_dir, "ct"}.
+{ct_log_dir, "ct/logs"}.
+{ct_use_short_names, true}.
+{eunit_compile_opts,
+ [{src_dirs, ["eunit"]}]}.
+
